--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'LeeSeoyun';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -29,9 +36,12 @@ a:hover {
 body {
     margin: 0;
     display: flex;
-    place-items: center;
+    justify-content: center;
     min-width: 320px;
     min-height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    font-family: 'LeeSeoyun';
 }
 
 h1 {
@@ -69,4 +79,8 @@ button:focus-visible {
     button {
         background-color: #f9f9f9;
     }
+}
+
+#root{
+    width:100vw;
 }
